[package]
name = "lectro-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastwebsockets = { version = "0.8.0", features = ["upgrade"] }
futures = "0.3.30"
hyper = "1.4.1"
tokio = { version = "1.39.2", features = ["full"] }
hyper-util = "0.1.3"
tokio-postgres = "0.7.11"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres" ] }
